[package]
name = "lumen-stream"
version = "0.1.0"
edition = "2024"
description = "Hub de download de mídias focado em throughput, manipulação segura de arquivos e zero rastreamento. Projeto comunitário Lumen Connection."
repository = "https://github.com/Lumen-Connection/lumen-stream"
license = "AGPL-3.0-only"
authors = ["Lumen Connection"]

# O crate yt-dlp exige lofty ^0.23.2, mas toda a série 0.23 foi yanked do
# crates.io — sem patch, o projeto não resolve em máquinas sem cache (CI, clones
# novos). A tag no repositório OFICIAL do lofty é o espelho durável do release
# (o fork boul2gom/lofty-rs usado antes foi apagado e quebrou o build).
# Remover quando o yt-dlp migrar para lofty >= 0.24.
[patch.crates-io]
lofty = { git = "https://github.com/Serial-ATA/lofty-rs", tag = "0.23.3" }

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = "0.27"
egui = "0.27"
yt-dlp = "2.7.2"
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = "0.14"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
# sem a feature image-data (só usamos texto) — evita puxar image 0.25
arboard = { version = "3", default-features = false }
notify-rust = "4"
# image alinhado ao 0.24 (mesma versão que o eframe usa) p/ evitar duplicata.
# feature "ico" garante a decodificação do ícone da janela.
image = { version = "0.24", features = ["ico"] }
# pdfium-render usando image 0.24 também (em vez do 0.25 padrão), p/ dedupe
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_latest", "thread_safe", "image_024"] }
printpdf = "0.7"
# reqwest alinhado ao 0.13 (mesma versão que o yt-dlp usa) p/ evitar duplicata.
# Recursos unificam com os do yt-dlp por serem a mesma versão.
reqwest = "0.13"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
qrcode = { version = "0.14", default-features = false }
lofty = "0.23"
# leitura de planilhas (xlsx/xls/ods) p/ conversão nativa em PDF, sem LibreOffice
calamine = "0.26"
# exclusão segura de arquivos: move p/ a Lixeira (recuperável) em vez de apagar
trash = "5"
